# INF2003_Embedded_System

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  main.c
documentation/: driver_documentation.docx  partial_integration_documentation.docx
driver/: CMakeLists.txt
driver/barcode/: CMakeLists.txt  README.md  barcode.c
driver/encoder/: CMakeLists.txt  README.md  encoder.c
driver/ideal_mapping/: CMakeLists.txt  ideal_mapping.c
driver/irline/: CMakeLists.txt  FreeRTOSConfig.h  README.md  irline.c
driver/magnetometer/: CMakeLists.txt  magnometer.c
driver/maze_solving/: CMakeLists.txt  README.md  maze_solving.c
driver/motor/: CMakeLists.txt  README.md  motor.c
driver/ultrasonic/: CMakeLists.txt  README.md  ultrasonic.c
driver/wifi/: CMakeLists.txt  README.md  cgi.h  htmldata.c  lwipopts_examples_common.h  project.c  ssi.h
driver/wifi/html_files/: index.shtml
include/: FreeRTOSConfig.h  barcode.h  blink.h  declarations.h  function_proto.h  global_variables.h  htmldata.c  init_task.h  initialize.h  interrupt.h  magnometer.h  makefsdata.py  motor_control.h  ultrasonic.h
partial_integration/: CMakeLists.txt  README.md  partial_integration.c
partial_integration/html_files/: index.shtml
partial_integration_include/: FreeRTOSConfig.h  README.md  barcode.h  cgi.h  declarations.h  definitions.h  function_prototype.h  global_variables.h  htmldata.c  initialize.h  initialize_pins.h  interrupts_tasks.h  magnometer.h  makefsdata.py  motor_control.h  ssi.h  ultrasonic.h
src/: CMakeLists.txt  main.c
